@@ -15,6 +15,10 @@ set_main_window_size(1000, 800)
 set_main_window_pos(0, 0)
 add_additional_font("C:/dev/DearPyGui/Resources/NotoSerifCJKjp-Medium.otf", 20)
 
+# char remaps
+#add_character_remap(0x0041, 0x00A2)
+#add_character_remap(0x0061, 0x00AB)
+
 #add_image("image1", "C:/dev/DearPyGui/Examples/SpriteMapExample.png")
 #add_image_button("image", "C:/dev/DearPyGui/Examples/SpriteMapExample.png")
 
